docs/config_examples/Install/openshift/quick-start-guides/HA/next-gen-route/route/cafe/secure/route-tea-edge.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    f5nr: "true"
  name: cafe-tea-edge
  namespace: cafe
spec:
  host: cafe.example.com
  path: "/tea"
  port:
    targetPort: 8080
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIFbDCCA1QCCQDFiyiR3eKdTjANBgkqhkiG9w0BAQsFADB4MQswCQYDVQQGEwJV
[...]
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIJQgIBADANBgkqhkiG9w0BAQEFAASCCSwwggkoAgEAAoICAQDcqtr/V8iI6tDW
[...]
      beFyZ9M9av2TFSV8QFAyQXMEVG1Gzw==
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: tea-svc
